fix(go): simplify ribbon, fix z-order rendering on ios

--- a/kaggle_environments/envs/open_spiel_env/games/go/visualizer/v2/src/components/VersusBanner.module.css
+++ b/kaggle_environments/envs/open_spiel_env/games/go/visualizer/v2/src/components/VersusBanner.module.css
@@ -7,17 +7,8 @@
   left: anchor(left);
   width: anchor-size(width);
   translate: 0 -50%;
-  transition: translate 1200ms cubic-bezier(0.22, 1.15, 0.36, 1);
-  will-change: transform;
-
-  @starting-style {
-    translate: 0 -100vh;
-    rotate: 12deg;
-  }
-
-  [data-reduced-motion] & {
-    transition-duration: 0ms;
-  }
+  animation: slide-in-out 1.3s forwards;
+  will-change: transform, opacity;
 
   /* <Ribbon> element. */
   & > * {
@@ -28,6 +19,21 @@
 
   & span {
     white-space: nowrap;
+  }
+}
+
+@keyframes slide-in-out {
+  from {
+    translate: 0 -100vh;
+    rotate: 12deg;
+    opacity: 1;
+    animation-timing-function: cubic-bezier(0.22, 1.15, 0.36, 1);
+  }
+  to {
+    translate: 0 -50%;
+    rotate: 0deg;
+    opacity: 1;
+    animation-timing-function: linear;
   }
 }
 
